fix: word-wrap break

--- a/src/sass/login.sass
+++ b/src/sass/login.sass
@@ -38,7 +38,7 @@ section.login
         text-align: center
     & header#error
         width: 100%
-        word-wrap: break
+        word-wrap: break-word
         font-size: 12px
         margin: 10px 0
     & form#form
